force-app/main/default/objects/Activity/fields/ywr__Yesware_Template__c.field-meta.xml
<CustomField>
    <fullName>ywr__Yesware_Template__c</fullName>
    <formula>ISBLANK(  ywr__YeswareTemplateNames__c  ) = False</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Yesware Template</label>
    <type>Checkbox</type>
</CustomField>