force-app/main/default/objects/Activity/fields/ywr__YeswareIsMailMerge__c.field-meta.xml
<CustomField>
    <fullName>ywr__YeswareIsMailMerge__c</fullName>
    <defaultValue>false</defaultValue>
    <label># Yesware MailMerge</label>
    <type>Checkbox</type>
</CustomField>