force-app/main/default/objects/Activity/fields/ywr__YeswareTemplateNames__c.field-meta.xml
<CustomField>
    <fullName>ywr__YeswareTemplateNames__c</fullName>
    <description>Yesware automatically populates this value.</description>
    <label>Yesware Template Name(s)</label>
    <type>TextArea</type>
</CustomField>